clippy_output_final.txt
cargo :     Checking otlp v0.6.0 (E:\_src\OTLP_rust\crates\otlp)
At line:1 char:23
+ ... \OTLP_rust; cargo clippy --package otlp --lib -- -D warnings 2>&1 | O ...
+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ot...st\crates\otlp):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: using config file `\\?\E:\_src\OTLP_rust\.clippy.toml`, `\\?\E:\_src\OTLP_rust\clippy.toml` will be ignored

error[E0499]: cannot borrow `chars` as mutable more than once at a time
   --> crates\otlp\src\ottl\parser.rs:149:45
    |
130 |         for ch in chars.by_ref() {
    |                   --------------
    |                   |
    |                   first mutable borrow occurs here
    |                   first borrow later used here
...
149 |                 '=' => self.tokenize_equals(&mut chars, &mut tokens)?,
    |                                             ^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `chars` as mutable more than once at a time
   --> crates\otlp\src\ottl\parser.rs:150:43
    |
130 |         for ch in chars.by_ref() {
    |                   --------------
    |                   |
    |                   first mutable borrow occurs here
    |                   first borrow later used here
...
150 |                 '!' => self.tokenize_bang(&mut chars, &mut tokens)?,
    |                                           ^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `chars` as mutable more than once at a time
   --> crates\otlp\src\ottl\parser.rs:151:48
    |
130 |         for ch in chars.by_ref() {
    |                   --------------
    |                   |
    |                   first mutable borrow occurs here
    |                   first borrow later used here
...
151 |                 '<' => self.tokenize_less_than(&mut chars, &mut tokens)?,
    |                                                ^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `chars` as mutable more than once at a time
   --> crates\otlp\src\ottl\parser.rs:152:51
    |
130 |         for ch in chars.by_ref() {
    |                   --------------
    |                   |
    |                   first mutable borrow occurs here
    |                   first borrow later used here
...
152 |                 '>' => self.tokenize_greater_than(&mut chars, &mut tokens)?,
    |                                                   ^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `chars` as mutable more than once at a time
   --> crates\otlp\src\ottl\parser.rs:153:42
    |
130 |         for ch in chars.by_ref() {
    |                   --------------
    |                   |
    |                   first mutable borrow occurs here
    |                   first borrow later used here
...
153 |                 '&' => self.tokenize_and(&mut chars, &mut tokens)?,
    |                                          ^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `chars` as mutable more than once at a time
   --> crates\otlp\src\ottl\parser.rs:154:41
    |
130 |         for ch in chars.by_ref() {
    |                   --------------
    |                   |
    |                   first mutable borrow occurs here
    |                   first borrow later used here
...
154 |                 '|' => self.tokenize_or(&mut chars, &mut tokens)?,
    |                                         ^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `chars` as mutable more than once at a time
   --> crates\otlp\src\ottl\parser.rs:155:45
    |
130 |         for ch in chars.by_ref() {
    |                   --------------
    |                   |
    |                   first mutable borrow occurs here
    |                   first borrow later used here
...
155 |                 '"' => self.tokenize_string(&mut chars, &mut tokens)?,
    |                                             ^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `chars` as mutable more than once at a time
   --> crates\otlp\src\ottl\parser.rs:156:55
    |
130 |         for ch in chars.by_ref() {
    |                   --------------
    |                   |
    |                   first mutable borrow occurs here
    |                   first borrow later used here
...
156 |                 '0'..='9' => self.tokenize_number(ch, &mut chars, &mut tokens)?,
    |                                                       ^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `chars` as mutable more than once at a time
   --> crates\otlp\src\ottl\parser.rs:158:50
    |
130 |         for ch in chars.by_ref() {
    |                   --------------
    |                   |
    |                   first mutable borrow occurs here
    |                   first borrow later used here
...
158 |                     self.tokenize_identifier(ch, &mut chars, &mut tokens)?
    |                                                  ^^^^^^^^^^ second mutable borrow occurs here

For more information about this error, try `rustc --explain E0499`.
warning: `otlp` (lib) generated 1 warning
error: could not compile `otlp` (lib) due to 9 previous errors; 1 warning emitted
